first step finisehd

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,3 +151,23 @@ body {
   }
 }
 
+.flex-fill {
+    flex: 1 1 auto;
+  }
+  
+  .flex-50 {
+    flex: 1 1 50%;
+  }
+  …
+  .p-20 {
+    padding: 20px;
+  }
+  
+  .pr-10 {
+    padding-right: 10px;
+  }
+  
+  .pl-10 {
+    padding-left: 10px;
+  }
+
